--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>practice github</title>
+    <title>first github</title>
 </head>
 <body>
-    <ul>
-        <li>
-        helllo
-        </li>
-        <li>
-            world
-        
-        </li>
-    </ul>
+    
 </body>
 </html>
