--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>first github</title>
 </head>
 <body>
-    
+  <ul>
+    <li> 
+        hello
+    </li>
+    <li>
+        world
+    </li>
+    <li> 
+        war
+    </li>
+  </ul>  
 </body>
 </html>
