--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         war
     </li>
   </ul>  
+  <div>
 <p>home is where the heart is</p>
-
+<p>Travel is the movement of people between distant geographical locations. Travel can be done by foot, bicycle, automobile, train, boat, bus, airplane, </p>
+</div> 
 </body>
 </html>
