--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </li>
   </ul>  
   <div>
+    <p>to make a journey, usually over a long distance: Between school and university, she spent a year travelling, mostly in Africa and Asia.</p>
 <p>home is where the heart is</p>
 <p>Travel is the movement of people between distant geographical locations. Travel can be done by foot, bicycle, automobile, train, boat, bus, airplane, </p>
 </div> 
